# coronastats.com.au

./: .gitignore  Makefile  docker-compose.yml  package-lock.json  package.json  pyproject.toml  setupJest.js  webpack.config.js
doh-data-ingest/: Dockerfile  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg
doh-data-ingest/doh_data_ingest/: __init__.py  data_extractor.py  data_updater.py  lambda.py  qlik_service.py
doh-data-ingest/scripts/: build.sh  run.sh  test.sh
doh-data-ingest/tests/: test_data_extractor.py  test_data_updater.py  test_doh_data_ingest.py
doh-data-ingest/tests/fixture/: doh-hypercube-02-may.json  doh-page-04-april.html  doh-page-05-april.html  doh-page-20-april.html
infra/: certificate.tf  cloudfront.tf  config_default.auto.tfvars  data_updater.tf  dns.tf  legacy_certificate.tf  legacy_cloudfront.tf  legacy_dns.tf  legacy_website.tf  main.tf  output.tf  variables.tf  website_bucket.tf
src/: browserUtil.js  chartPage.html  chartPage.js  chartPage.scss  chartUtil.js  data.js  dataUtil.js  ga.js  index.html  index.js  index.scss  styleguide.scss
src/coronaforecast_ingest/: __init__.py
src/data/: data.js  data.test.js  index.js  totalCaseCount_act.json  totalCaseCount_australia.json  totalCaseCount_nsw.json  totalCaseCount_nt.json  totalCaseCount_qld.json  totalCaseCount_sa.json  totalCaseCount_tas.json  totalCaseCount_vic.json  totalCaseCount_wa.json
src/ingest/: main.py
src/util/: fminsearch.js
static/data/: totalCaseCount_australia.json  totalCaseCount_nsw.json  totalCaseCount_sa.json  totalCaseCount_vic.json
