[tool.poetry]
name = "coronaforecast_ingest"
version = "0.1.0"
description = "The description of the package"
license = "MIT"
authors = [
    "Cody Jenkins <cody@iknowcss.com>"
]

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.9"
requests = "^2.23"
beautifulsoup4 = "^4.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"

[tool.poetry.scripts]
start = 'src.coronaforecast_ingest:main'
