[tool.poetry]
name = "doh_data_ingest"
version = "0.1.0"
description = ""
authors = ["Cody Jenkins <cjenkins@dius.com.au>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
beautifulsoup4 = "^4.8.2"
boto3 = "^1.12.32"
pytest-watch = "^4.2.0"
testfixtures = "^6.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
moto = "^1.3.14"

[tool.poetry.scripts]
start = 'doh_data_ingest:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
